2015-12-30  Frank Terbeck  <ft@bewatermyfriend.org>

	* 37451: Functions/VCS_Info/vcs_info: vcs_info: Declare "msgs" in
	early context

2015-12-27  Axel Beckert  <abe@deuxchevaux.org>

	* 37438: Completion/Debian/Command/_aptitude: Also parse --help/-h
	output of aptitude 0.7.5 and later.

2015-12-26  Axel Beckert  <abe@deuxchevaux.org>

	* 37436: Felipe Sateler: Completion/Debian/Command/_apt:
	Add missing apt purge and autoremove subcommands.

2015-12-25  Barton E. Schaefer  <schaefer@zsh.org>

	* 37435 (+ fix typo): Src/exec.c: allow execution of empty files
	as "sh" scripts

	* 37434: Src/exec.c: POSIXBUILTINS "command" should prevent shell
	exit on errors from special builtins

2015-12-23  Philip Sequeira  <phsequei@gmail.com>

	* 37345: Functions/VCS_Info/VCS_INFO_maxexports,
	Functions/VCS_Info/VCS_INFO_set: VCS_INFO functions break with
	setopt no_unset

2015-12-19  Barton E. Schaefer  <schaefer@zsh.org>

	* users/21082 (expanded): Functions/Misc/is-at-least: do a more
	complete job of sorting version strings that are not in the form
	of zsh version numbers; additional explanatory comment

	* unposted (cf. 37387): Src/options.c: emulate turns off
	WARN_CREATE_GLOBAL

	* users/21068: Functions/Newuser/zsh-newuser-install: use emacs
	keymap in vared by default (less surprising than vi modes)

2015-12-19  Mikael Magnusson  <mikachu@gmail.com>

	* 36650: Doc/Zsh/zle.yo, Src/Zle/zle_main.c: Add
	zle-line-pre-redraw hook for highlighting

2015-12-19  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted (after users/20873): Functions/Zle/edit-command-line:
	Theoretical fix: don't parse print/echo escape sequences in
	$zle_bracketed_paste.

	* 37257 (in part): Test/A06assign.ztst: Add array assignment tests.

2015-12-16  Peter Stephenson  <p.stephenson@samsung.com>

	* 37411: Test/X03zlebindkey.ztst: more bindkey tests.

2015-12-15  Peter Stephenson  <p.stephenson@samsung.com>

	* 37405: Src/Zle/zle_keymap.c, Test/X03zlebindkey.ztst: fix