@@ -1,3 +1,8 @@
+2015-12-31  Daniel Shahaf  <d.s@daniel.shahaf.name>
+
+	* 37456: Src/Zle/zle_refresh.c: Have zle_highlight=(none)
+	disable paste highlighting
+
 2015-12-30  Frank Terbeck  <ft@bewatermyfriend.org>
 
 	* 37451: Functions/VCS_Info/vcs_info: vcs_info: Declare "msgs" in
